# bind-marshal

./: .gitignore  LICENSE  NOTES.txt  README  Setup.hs  bind-marshal.cabal  copyright_header.txt  data_marshalling.txt  overview.txt  project.hs
ci/: build-and-test
src/Bind/: Marshal.hs
src/Bind/Marshal/: Action.hs  DataModel.hs  DesAction.hs  Dynamic.hs  Prelude.hs  SerAction.hs  StaticProperties.hs  StdLib.hs  TypePrelude.hs  Verify.hs
src/Bind/Marshal/Action/: Base.hs  Dynamic.hs  Monad.hs  Static.hs  Verify.hs
src/Bind/Marshal/Action/Monad/: Static.hs
src/Bind/Marshal/Control/Monad/: Parameterized.hs
src/Bind/Marshal/DataModel/: Base.hs
src/Bind/Marshal/DesAction/: Base.hs  Dynamic.hs  Static.hs  Storable.hs  Verify.hs
src/Bind/Marshal/DesAction/Dynamic/: Base.hs
src/Bind/Marshal/DesAction/Verify/: Static.hs
src/Bind/Marshal/SerAction/: Base.hs  Dynamic.hs  Static.hs  Storable.hs  Verify.hs
src/Bind/Marshal/SerAction/Dynamic/: Base.hs
src/Bind/Marshal/SerAction/Verify/: Static.hs
src/Bind/Marshal/StaticProperties/: DesAction.hs  SerAction.hs
src/Bind/Marshal/StdLib/: Des.hs  Packed.hs  Ser.hs  Types.hs  Utils.hs
src/Bind/Marshal/StdLib/Dynamic/: FixedBuffer.hs
src/Bind/Marshal/StdLib/Dynamic/ByteString/: Lazy.hs
src/Bind/Marshal/StdLib/Dynamic/ByteString/Lazy/: Des.hs  Ser.hs
src/Bind/Marshal/StdLib/Utils/: Des.hs  Ser.hs
src/Bind/Marshal/Verify/: Dynamic.hs
test/: ArbMarshal.hs  gen_arbmarshal_cases.hs  historical_results.txt  old_verify_data_model_proto.hs  test.hs  verify_action.hs  verify_action_base.hs  verify_action_dynamic.hs  verify_action_monad.hs  verify_action_monad_static.hs  verify_action_static.hs  verify_arbmarshal.hs  verify_arbmarshal_full_static_cases.hs  verify_bind_rules_proto.hs  verify_bind_rules_proto_2.hs  verify_bounded_accum.hs  verify_control_monad_parametrized.hs  verify_data_model.hs  verify_data_model_proto.hs  verify_data_model_static.hs  verify_desaction.hs  verify_desaction_base.hs  verify_desaction_dynamic.hs  verify_desaction_dynamic_base.hs  verify_desaction_dynamic_bind_rules.hs  verify_desaction_dynamic_fixed_buffer.hs  verify_desaction_dynamic_fixed_buffer_fail.hs  verify_desaction_dynamic_nop_provider_fail.hs  verify_desaction_dynamic_unit_nop.hs  verify_desaction_static.hs  verify_desaction_static_byte_size.hs  verify_desaction_static_byte_size_loops.hs  verify_desaction_static_fixed_buffer.hs  verify_desaction_static_fixed_buffer_perf.hs  verify_desaction_static_loops.hs  verify_desaction_storable.hs  verify_dynamic_bytestring_perf.hs  verify_heap.hs  verify_marshal.hs  verify_monad_class_parametricity.hs  (+23 more)
test/ArbMarshal/: Binary.hs  Dynamic.hs  GenCode.hs
test/ArbMarshal/GenCode/: Utils.hs
test/FLVHeader/: Data.hs  Des.hs  Ser.hs
test/TestCases/: BinaryCase0.hs  BinaryCase1.hs  BinaryCase10.hs  BinaryCase11.hs  BinaryCase12.hs  BinaryCase13.hs  BinaryCase14.hs  BinaryCase15.hs  BinaryCase16.hs  BinaryCase17.hs  BinaryCase18.hs  BinaryCase19.hs  BinaryCase2.hs  BinaryCase3.hs  BinaryCase4.hs  BinaryCase5.hs  BinaryCase6.hs  BinaryCase7.hs  BinaryCase8.hs  BinaryCase9.hs  FullStaticCase0.hs  FullStaticCase1.hs  FullStaticCase10.hs  FullStaticCase11.hs  FullStaticCase12.hs  FullStaticCase13.hs  FullStaticCase14.hs  FullStaticCase15.hs  FullStaticCase16.hs  FullStaticCase17.hs  FullStaticCase18.hs  FullStaticCase19.hs  FullStaticCase2.hs  FullStaticCase3.hs  FullStaticCase4.hs  FullStaticCase5.hs  FullStaticCase6.hs  FullStaticCase7.hs  FullStaticCase8.hs  FullStaticCase9.hs
