-- Copyright   :  (C) 2009 Corey O'Connor
-- License     :  BSD-style (see the file LICENSE)

name:               bind-marshal
version:            0.1
build-depends:      base == 4.4.*,
                    unix == 2.5.*,
                    mtl == 2.0.*,
                    numeric-prelude == 0.2.*,
                    monads-tf == 0.1.*,
                    transformers == 0.2.*,
                    containers == 0.4.*,
                    deepseq == 1.1.*,
                    random == 1.0.*,
                    type-level-tf >= 0.2.1,
                    ghc-prim,
                    strict == 0.3.*,
                    bytestring == 0.9.*,
                    stm == 2.2.*
build-type:         Custom
exposed-modules:    Bind.Marshal.Action.Base
                    Bind.Marshal.Action.Dynamic
                    Bind.Marshal.Action.Monad.Static
                    Bind.Marshal.Action.Monad
                    Bind.Marshal.Action.Static
                    Bind.Marshal.Action
                    Bind.Marshal.Control.Monad.Parameterized
                    Bind.Marshal.DataModel.Base
                    Bind.Marshal.DataModel
                    Bind.Marshal.DesAction.Base
                    Bind.Marshal.DesAction.Dynamic.Base
                    Bind.Marshal.DesAction.Dynamic
                    Bind.Marshal.DesAction.Static
                    Bind.Marshal.DesAction.Storable
                    Bind.Marshal.DesAction
                    Bind.Marshal.Dynamic
                    Bind.Marshal.Prelude
                    Bind.Marshal.SerAction.Base
                    Bind.Marshal.SerAction.Dynamic.Base
                    Bind.Marshal.SerAction.Dynamic
                    Bind.Marshal.SerAction.Static
                    Bind.Marshal.SerAction.Storable
                    Bind.Marshal.SerAction
                    Bind.Marshal.StaticProperties.DesAction
                    Bind.Marshal.StaticProperties.SerAction
                    Bind.Marshal.StaticProperties
                    Bind.Marshal.StdLib.Des
                    Bind.Marshal.StdLib.Dynamic.ByteString.Lazy.Des
                    Bind.Marshal.StdLib.Dynamic.ByteString.Lazy.Ser
                    Bind.Marshal.StdLib.Dynamic.ByteString.Lazy
                    Bind.Marshal.StdLib.Dynamic.FixedBuffer
                    Bind.Marshal.StdLib.Ser
                    Bind.Marshal.StdLib.Types
                    Bind.Marshal.StdLib.Utils.Des
                    Bind.Marshal.StdLib.Utils.Ser
                    Bind.Marshal.StdLib.Utils
                    Bind.Marshal.StdLib
                    Bind.Marshal.TypePrelude
                    Bind.Marshal
hs-source-dirs:     src
extensions:         TypeFamilies
                    CPP
                    ForeignFunctionInterface
                    ScopedTypeVariables
                    NoImplicitPrelude
                    RebindableSyntax
                    NamedFieldPuns
                    UndecidableInstances
                    TypeSynonymInstances
                    FlexibleInstances
                    FlexibleContexts
                    MultiParamTypeClasses
                    PackageImports
                    RankNTypes
                    NoMonomorphismRestriction
                    LiberalTypeSynonyms
                    EmptyDataDecls
                    GADTs
                    KindSignatures
                    BangPatterns
                    RecordWildCards
                    TypeOperators
ghc-options:        -fcontext-stack=1000
                    -fliberate-case-threshold=1000
                    -threaded
                    -with-rtsopts=-K128M
                    -fspec-constr
                    -fliberate-case
                    -fstatic-argument-transformation
                    -funfolding-creation-threshold=1000
                    -funfolding-use-threshold=46
                    -fspec-constr-count=200
